<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">MobLinkDemo</string>
	
	<string name="demonstration">演示</string>
	<string name="source">来源source</string>
	<string name="source_hint">用于记录来源，例如 uuid-123456</string>
	<string name="custom_params">自定义参数</string>
	<string name="param_key_hint">键Key</string>
	<string name="params_value_hint">值value</string>
	<string name="get_mobid">获取MobID</string>
	<string name="share">分享</string>
	<string name="share_to_wxmini">分享到小程序</string>
	<string name="set_default_value">填充默认值</string>
	<string name="path">路径path</string>
	<string-array name="path_arr">
		<item>选择A页面路径</item>
		<item>选择B页面路径</item>
		<item>选择C页面路径</item>
		<item>选择D页面路径</item>
	</string-array>
	<string name="path_wx_mini">/demo/mini</string>
	<string name="activity_a">A页面</string>
	<string name="activity_b">B页面</string>
	<string name="activity_c">C页面</string>
	<string name="activity_d">D页面</string>
	<string name="activity_mini">小程序页面</string>
	<string name="activity_mini_desc">这是微信小程序恢复的控制器界面</string>
	<string name="check_params">查看参数</string>
	<string name="activity_text_a">A</string>
	<string name="activity_text_b">B</string>
	<string name="activity_text_c">C</string>
	<string name="activity_text_d">D</string>

	<string name="common_wx_mini">小程序</string>
	<string name="common_scenes">应用场景</string>
	<string name="news_app">资讯App</string>
	<string name="vedio_app">视频App</string>
	<string name="shopping_app">电商App</string>
	<string name="shopping_title">电商</string>
	<string name="shopping_suggestion">相关推荐</string>
	<string name="buy_now">立刻购买</string>
	<string name="today_news">今日新闻</string>
	<string name="related_news">相关新闻</string>
	<string name="movies">电影视频</string>
	<string name="related_videos">专题联播</string>
	
	<string name="params_scenes">参数场景</string>
	<string name="air_ticket_app">飞机票App</string>
	<string name="invite_users_scene">邀请用户发奖励场景</string>
	
	<string name="invite_user">邀请用户</string>
	<string name="invite_user_title">你的ID是&lt;font color=\'#4e8bed\'&gt;%s&lt;/font&gt;,邀请用户各奖励10元红包</string>
	<string name="change_id">换一个ID</string>
	<string name="get_reward">呼朋唤友 拿红包</string>
	<string name="invite_user_text">邀请好友注册，双方各奖励10元红包</string>
	<string name="invite_user_content">邀请好友注册，双方各奖励&lt;font color=\'#4e8bed\'&gt;10元&lt;/font&gt;红包。</string>
	<string name="share_to_friends">快速分享给好友</string>
	<string name="more_detail_rules">更多详细规则</string>
	<string name="invite_register_success">你好，%s \n 注册成功</string>
	<string name="invite_register_person">邀请人ID：%s \n 双方各获得10元优惠券</string>
	
	<string name="key1">key1</string>
	<string name="key2">key2</string>
	<string name="key3">key3</string>
	<string name="value1">value1</string>
	<string name="value2">value2</string>
	<string name="value3">value3</string>

	<string name="check_restore_scene_loading">检查场景还原数据中...</string>
	<string name="share_failed">分享失败，MobID是空的!</string>
	<string name="source_empty">请至少填写一个参数值</string>

	<string name="param">参数</string>
	<string name="close">关闭</string>
	
	<string name="show_share_titel">MobLink帮你实现网页APP相互跳转</string>
	<string name="ticket_share_titel">快速查询机票信息</string>
	<string name="invite_share_titel">邀请你注册得10元红包</string>
	<string name="share_text">这是一个MobLink功能演示</string>
	
	<string name="dialog_text">是否进行还原场景？</string>
	<string name="yes">是</string>
	<string name="no">否</string>
	<string name="please_get_mobid">请先获取MobID</string>
</resources>
