<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="250dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/param"
        android:textColor="#000000"
        android:textSize="15dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#d9d9d9" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_dialog_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:text="@string/path"
            android:textColor="#000000"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/tv_dialog_source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:text="@string/source"
            android:textColor="#000000"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/tv_dialog_param"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/param"
            android:textColor="#000000"
            android:textSize="14dp" />
        
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#d9d9d9" />
    
    <TextView
        android:id="@+id/tv_dialog_close"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/close"
        android:textColor="#000000"
        android:textSize="15dp"/>
</LinearLayout>