<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/demonstration"
                android:textColor="#000000"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/tv_set_default_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:text="@string/set_default_value"
                android:textColor="#4e8bed"
                android:textSize="14dp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#d9d9d9" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="25dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/path"
                android:textColor="#000000"
                android:textSize="15dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="25dp"
                android:focusable="false"
                android:enabled="false"
                android:singleLine="true"
                android:textColor="#000000"
                android:text="@string/path_wx_mini"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/source"
                android:textColor="#000000"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/et_source"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="10dp"
                android:hint="@string/source_hint"
                android:textColor="#000000"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_params"
                android:textColor="#000000"
                android:textSize="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_key1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="2"
                    android:hint="@string/param_key_hint"
                    android:maxLength="12"
                    android:textColor="#000000"
                    android:textSize="15dp" />

                <EditText
                    android:id="@+id/et_value1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:hint="@string/params_value_hint"
                    android:maxLength="20"
                    android:textColor="#000000"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_key2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="2"
                    android:hint="@string/param_key_hint"
                    android:maxLength="12"
                    android:textColor="#000000"
                    android:textSize="15dp" />

                <EditText
                    android:id="@+id/et_value2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:hint="@string/params_value_hint"
                    android:maxLength="20"
                    android:textColor="#000000"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_key3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="2"
                    android:hint="@string/param_key_hint"
                    android:maxLength="12"
                    android:textColor="#000000"
                    android:textSize="15dp" />

                <EditText
                    android:id="@+id/et_value3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:hint="@string/params_value_hint"
                    android:maxLength="20"
                    android:textColor="#000000"
                    android:textSize="15dp" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_get_mobid"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="45dp"
                android:background="@drawable/demo_btn_corner_normal"
                android:text="@string/get_mobid"
                android:textColor="#4e8bed" />

            <Button
                android:id="@+id/btn_share_to_wxmini"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/demo_btn_selector"
                android:text="@string/share_to_wxmini"
                android:textColor="@color/demo_btn_text_color" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>