<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:gravity="center"
        android:text="@string/common_scenes"
        android:textColor="#000000"
        android:textSize="17dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#d9d9d9"/>

    <LinearLayout
        android:id="@+id/ll_news"
        android:layout_width="match_parent"
        android:layout_height="181dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="21dp"
            android:src="@drawable/demo_news"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news_app"
            android:textColor="#000000"
            android:textSize="18dp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#f7f9fa"/>

    <LinearLayout
        android:id="@+id/ll_videos"
        android:layout_width="match_parent"
        android:layout_height="181dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="21dp"
            android:src="@drawable/demo_vedios"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vedio_app"
            android:textColor="#000000"
            android:textSize="18dp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#f7f9fa"/>

    <LinearLayout
        android:id="@+id/ll_shopping"
        android:layout_width="match_parent"
        android:layout_height="181dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="21dp"
            android:src="@drawable/demo_shopping"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shopping_app"
            android:textColor="#000000"
            android:textSize="18dp"/>
    </LinearLayout>
</LinearLayout>