<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:gravity="center"
        android:text="@string/demonstration"
        android:textColor="#000000"
        android:textSize="17dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#d9d9d9" />

    <LinearLayout
        android:id="@+id/ll_air_ticket"
        android:layout_width="match_parent"
        android:layout_height="276dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="21dp"
            android:src="@drawable/demo_air_ticket" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/air_ticket_app"
            android:textColor="#000000"
            android:textSize="18dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#f7f9fa" />

    <LinearLayout
        android:id="@+id/ll_invite_users"
        android:layout_width="match_parent"
        android:layout_height="276dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="21dp"
            android:src="@drawable/demo_invite_users" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invite_users_scene"
            android:textColor="#000000"
            android:textSize="18dp" />
    </LinearLayout>

    
</LinearLayout>