<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="58dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="15dp"
            android:src="@drawable/demo_iv_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/invite_user"
            android:textColor="#000000"
            android:textSize="17dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#d9d9d9" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="92dp"
        android:src="@drawable/demo_invite_person" />

    <TextView
        android:id="@+id/tv_invite_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="35dp"
        android:text="@string/invite_register_success"
        android:textColor="#000000"
        android:textSize="24dp"
        android:lineSpacingExtra="45dp"/>
    

    <TextView
        android:id="@+id/tv_invite_text"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="bottom|center"
        android:layout_marginBottom="25dp"
        android:text="@string/invite_register_person"
        android:textColor="#000000"
        android:textSize="15dp"
        android:lineSpacingExtra="25dp"/>
</LinearLayout>