<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_above="@+id/view"
		android:orientation="vertical">
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical">
			<include	android:id="@+id/layout_tag1" layout="@layout/layout_tag1"/>
			<include	android:id="@+id/layout_tag2" layout="@layout/layout_tag2"/>
			<include	android:id="@+id/layout_tag3" layout="@layout/layout_tag3"/>			
		</LinearLayout>
	</ScrollView>
	<View
		android:id="@+id/view"
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:layout_above="@+id/ll_bar"
		android:background="#d9d9d9"/>
    <LinearLayout
		android:id="@+id/ll_bar"
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:padding="10dp"
    	android:orientation="horizontal">
		<LinearLayout
		    android:id="@+id/ll_tag1"
		    android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:gravity="center_horizontal"
	    	android:layout_weight="1"
	    	android:orientation="vertical">
		    <ImageView
		        android:id="@+id/iv_demonstrate"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="6dp"
		        android:src="@drawable/demo_tag1_selector" />
		    <TextView
		        android:id="@+id/tv_demonstrate"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="11dp"
				android:textColor="@color/demo_tag_text_color"
		        android:text="@string/demonstration"/>	    
	    </LinearLayout>
	    <LinearLayout
		    android:id="@+id/ll_tag2"
		    android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:gravity="center_horizontal"
	    	android:layout_weight="1"
	    	android:orientation="vertical"
			android:clickable="true">	
		    <ImageView
		        android:id="@+id/iv_com_sce"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="6dp"
		        android:src="@drawable/demo_tag2_selector" />
		    <TextView
		        android:id="@+id/tv_com_sce"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="11dp"
				android:textColor="@color/demo_tag_text_color"
		        android:text="@string/common_scenes"/>	    
	    </LinearLayout>
	    <LinearLayout
		    android:id="@+id/ll_tag3"
		    android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:gravity="center_horizontal"
	    	android:layout_weight="1"
	    	android:orientation="vertical"
			android:clickable="true">	
		    <ImageView
		        android:id="@+id/iv_scenes"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="6dp"
		        android:src="@drawable/demo_tag3_selector" />
		    <TextView
		        android:id="@+id/tv_scenes"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="11dp"
				android:textColor="@color/demo_tag_text_color"
		        android:text="@string/params_scenes"/>	    
	    </LinearLayout>
	</LinearLayout>

</RelativeLayout>
